--- a/style/styleBucks.css
+++ b/style/styleBucks.css
@@ -4,10 +4,12 @@
 
 * {box-sizing: border-box;}
 
-div {
-    border: rgb(243, 42, 42) solid 2px;
-    
+
+* a:visited{
+    color: inherit;
 }
+a {text-decoration: none;}
+
 .greenbit {
     
     background: rgb(20, 100, 68);
@@ -15,9 +17,12 @@ div {
     height: 10px; 
 }
 
- .header {
-    /* border: 3px solid black;
+
+ .header  {
+    border: rgb(175, 16, 69) solid 1px;
     background: rgba(247, 246, 246, 0.858);
+    width: 100%;
+   
     height: 105px;
     font-family:'Lato', sans-serif;
     font-size: 14px;
@@ -25,70 +30,84 @@ div {
     font-stretch: 100%;
     font-weight: 700;
     display: flex;
-    flex-direction: column;
-    width: 100%; */ */
-
-    border: 3px solid black;
-
-   
-}
-.header_pages ul li  {
-    border: black solid 1px;
-    /* display: flex;
-    flex-direction: row;
     justify-content: center;
-    align-items: center;
-    flex-wrap: wrap;
-    height: 50px;
-    width: 70%;  */
-    /* text-decoration: none; */
-    padding: 8px 25px;
-    /* transition: all .5s ease; */
-    display: inline;
-}
-   
     
-  
+ }
 
-/* 
-. map  {
+.logo {
+    border: solid blue 1px;
+
+
+}
+
+.header_pages{
+    margin-right: 25vh;
+}
+.header_pages ul li {
+    border: black solid 1px;
+    padding: 8px 25px;
+    display: inline;
+    text-decoration: none;
   
-    flex-direction: column;
-    width: 30%;
-    height: 20px;
-} */
+ 
+}
+
+.header_pages ul li:hover {
+    background: black;
+    color: white;
+  
+    
+}
+
+
+
+.headerB {
+    border: brown solid 1px;
+    text-decoration: none;
+    width: 15%;
+    margin-left: 8vh;
+    margin-top: 2vh;
+  
+}
 
 .images {
-    border: black solid 3px;
+    border: black solid 1px;
+    width: 100%;
     display: flex;
-    /* width: 100%;
-  */
     flex-direction: column;
-    align-content: center;
-    flex: 1;
+    justify-content: center;
+    align-items: center; 
+    /* flex: 1; */
 }
 
 
-/* .social {
- 
-    background: rgba(247, 246, 246, 0.858);
-    display: flex;
-    flex-direction: row;
-    padding-left: 5%;
-    
-    flex-wrap: wrap;
-} */
 
 ol li {
     display: inline;
-    
+     
 
 }
 .social {
+border: solid pink 4px;
 background: rgba(247, 246, 246, 0.858);
 width: 100%;
-max-width: 1360px;
-margin: 0 auto;
-padding: 0 10px;
-box-sizing: border-box;
+
+
+/* margin-left: 20vh; */
+/* padding-left: 20vh; */
+display: inline;
+display: flex;
+justify-content: center;
+align-items: center;
+padding-right: 60vh;
 }
+
+
+
+/* Social Icons to  become a bit lighter when hovered */
+
+.icons ol li img:hover {
+    border: solid plum 2px;
+    opacity: 0.5;
+}
+
